# InertialNav

./: README.md
matlab_gen/jar/: vn100imu-0.0.0.md5
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+vn100imu/: coord.m  xyz_data.m  ypr_data.m
vn100imu/: CMakeLists.txt  package.xml
vn100imu/Arduino/dualencoder/: dualencoder.ino
vn100imu/Arduino/encoder/: encoder.ino
vn100imu/Arduino/newencoder/: newencoder.ino
vn100imu/Arduino/simplecontrol_dualencoder/: simplecontrol_dualencoder.ino
vn100imu/include/: botcontrol.h  graphicsviewmouse.h  setparameters.h  tuning_ui.h
vn100imu/matlabscripts/: accelCallback.m  accident.mat  adaptivefiltdist.mat  adaptivetrain.m  disttesting.m  encCallback.m  fiftyhertz.mat  hundredhertz.mat  hundredhertzaccvel.mat  insdatacollect.m  parallelplotting.m  plotvals.m  ros2dtrack.m  rosdcmtest.m  rostest.m  rostestiirfilter.m  savedacc.mat  savedenc.mat  velwithkalmanros.m  yzdata.mat  yzdata2.mat
vn100imu/matlabscripts/Final Codes/: 180cmp150.mat  5mp200.mat  cleanupmyros.m  plot2dfeednbackins.m  plot2dins.m  processdata.m  set1.mat  set2.mat  set3.mat  set4.mat  set5r.mat  set6r.mat  setlong.m  simpletest.mat  smallstraight.mat  train2d.m  train2d.m~  trainnn.m  yprCallback.m
vn100imu/matlabscripts/Final Codes/IMU2/: cleanupmyros.m  encCallback.m  first_try.mat  imu2Callback.m  insdatacollect.m  ns2_nov17.mat  ns_nov17.mat  processdata.m  set1imu2.mat  set2imu2.mat  set3imu2.mat
vn100imu/matlabscripts/html/: plotvals.html
vn100imu/msg/: coord.msg  xyz_data.msg  ypr_data.msg
vn100imu/scripts/: acc_vel_Plot.py  arduinoserialnode.py  camera.py  depth_plot.ui  imu2serialnode.py  samplePlot.py  ui.py
vn100imu/src/: acc_filt_tf.cpp  botcontrol.cpp  botcontrol_main.cpp  graphicsviewmouse.cpp  ins_dcm.cpp  overheadtrack.cpp  overlay.cpp  plotting2d.cpp  setparameters.cpp  tuning_ui.cpp  tuning_ui_main.cpp  velcalc.cpp  vn100node (copy).cpp  vn100node.cpp
vn100imu/ui/: botcontrol.ui  setparameters.ui  tuning_ui.ui
